<resources>
    <string name="app_name">ICML</string>
    <string name="qtd_lucro_sorvete">Qual o lucro obtido com a venda de sorvetes?</string>
    <string name="qtd_lucro_picole_cremoso">E o lucro para picolés cremosos?</string>
    <string name="qtd_lucro_picole_fruta">E o lucro para picolés de fruta?</string>
    <string name="qtd_leite">Qual a quantidade de leite (em litros) necessária para a produção dos sorvetes e picolés?</string>
    <string name="qtd_leite_bola_sorvete">Qual a quantidade necessária de leite (em ml) para produzir uma bola de sorvete?</string>
    <string name="qtd_leite_bola_picole">E a quantidade necessária de leite (em ml) para produzir um picolé cremoso?</string>
    <string name="qtd_hora">Qual o total de horas disponível para produção?</string>
    <string name="qtd_hora_sorvete">Qual o tempo (em minutos) necessário para produzir uma bola de sorvete?</string>
    <string name="qtd_hora_picole_cremoso">E o tempo (em minutos) necessário para o picolé cremoso?</string>
    <string name="qtd_hora_picole_fruta">E o tempo (em minutos) necessário para o picolé de fruta?</string>
    <string name="qtd_maquina_congelamento">A máquina de congelamento limita em quantas unidades a capacidade de produção diária de picolés?</string>
    <string name="qtd_freezers_armazenamento">A quantidade de freezers destinados ao armazenamento de sorvete limita em quantas bolas de sorvete a produção diária de sorvetes?</string>
    <string name="qtd_demanda_sorvete">Qual a demanda de bolas de sorvete por dia?</string>
    <string name="qtd_demanda_picoles_cremosos">E de picolés cremosos?</string>
    <string name="qtd_demanda_picoles_fruta">E de picolés de fruta?</string>
    <string name="calcular_solucao">Calcular solução</string>
    <string name="preencher_campos">Por favor, preencha todos os campos!</string>
</resources>
